Fix horizontal menu overflow in mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   --color-primary: #453C78;
   --color-primary-light: #4E44A0;
   --color-primary-dark: #2D284F;
+  --color-nodo: #0E0134;
   --color-secondary: #826D4A;
   --color-secondary-light: #ECC9A3;
   --color-tertiary: #00D0A4;
@@ -54,8 +55,11 @@
   --font-size-large-30: 28px;
   --font-size-large-32: 32px;
   --font-size-large-36: 36px;
+  --font-size-large-38: 38px;
   --font-size-large-40: 40px;
-  --font-size-large-44: 44px; }
+  --font-size-large-44: 44px;
+  --font-size-large-56: 56px;
+  --font-size-large-56: 64px; }
 
 html {
   width: 100%;
@@ -107,7 +111,7 @@ ul.data_list {
 ul.data_list li {
   padding-bottom: 10px; }
 
-ol.ol_counter li {
+ol.ol_counter li, ul li, ol li {
   padding-bottom: 10px;
   margin-inline-start: 24px; }
 
@@ -1264,7 +1268,8 @@ footer {
     color: var(--color-primary-dark);
     white-space: nowrap;
     transition: all 0.2s ease;
-    min-width: 72px;
+    flex-basis: 72px;
+    flex-shrink: 0;
     border-width: 0; }
     .horizontal-menu__item-button:hover {
       cursor: pointer;
@@ -1281,7 +1286,8 @@ footer {
     background-color: var(--box-bg-color);
     color: var(--box-text-color);
     display: grid;
-    grid-template-areas: 'content'; }
+    grid-template-areas: 'content';
+    grid-template-columns: minmax(0, 1fr); }
     @media (min-width: 600px) {
       .horizontal-menu__chalkboard-content {
         padding-block: 24px;
